--- a/CA2/CA2/nbproject/private/private.properties
+++ b/CA2/CA2/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\X00136103\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=C:\\Users\\Michael Brady\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
